BaSP-W02-2022: styles added to section 4, section 4 html edited to add styles, buttons styles corrected

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -251,30 +251,46 @@
                 </h2>
                 <form>
                     <div>
-                        <label>Full name</label>
-                        <input type="text" placeholder="Insert your name">
+                        <li>
+                            <label>Full name</label>
+                        </li>
+                        <li>
+                            <input type="text" placeholder="Insert your name">
+                        </li>                        
                     </div>
                     <div>
-                        <label>Email</label>
-                        <input type="email" placeholder="Insert your email">
+                        <li>
+                            <label>Email</label>
+                        </li>
+                        <li>
+                            <input type="email" placeholder="Insert your email">
+                        </li>
                     </div>
                     <div>
-                        <label>Contact area</label>
-                        <select>
-                            <option value="Human Resources">Human Resourses</option>
-                            <option value="Systems">Systems</option>
-                            <option value="Marketing">Marketing</option>
-                        </select>
+                        <li>
+                            <label>Contact area</label>
+                        </li>
+                        <li>
+                            <select>
+                                <option value="Human Resources">Human Resourses</option>
+                                <option value="Systems">Systems</option>
+                                <option value="Marketing">Marketing</option>
+                            </select>
+                        </li>
                     </div>
                     <div>
-                        <label>Message</label>
-                        <input type="textarea" placeholder="Message">
+                        <li>
+                            <label>Message</label>
+                        </li>
+                        <li>
+                            <input type="textarea" placeholder="Message">
+                        </li>
                     </div>
                 </form>
-                <button>
+                <button id="button-1">
                     Reset
                 </button>
-                <button>
+                <button id="button-2">
                     Send
                 </button>
             </section>
