--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -7,6 +7,7 @@
         <title>Trackgenix</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
+        <script src="https://kit.fontawesome.com/fc16f7a8a7.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
@@ -15,19 +16,19 @@
             </p>
             <nav>
                 <a href="http://www.facebook.com">
-                    <img src="assets/facebook_icon.png" alt="Facebook" width="35px" height="35px">
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
                 <a href="http://www.instagram.com">
-                    <img src="assets/instagram_icon.png" alt="Instagram" width="35px" height="35px">
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="http://www.twitter.com">
-                    <img src="assets/twitter_icon.png" alt="Twitter" width="35px" height="35px">
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
                 <a href="http://www.github.com">
-                    <img src="assets/github_icon.png" alt="GitHub" width="35px" height="35px">
+                    <i class="fa-brands fa-github"></i>
                 </a>
                 <a href="http://www.linkedin.com">
-                    <img src="assets/linkedin_icon.png" alt="LinkedIn" width="35px" height="35px">
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </nav>
         </header>
@@ -84,7 +85,7 @@
                         Trackgenix is a web system that facilitates the registration of hours worked by each employee in each project and work
                         team.
                     </p>
-                    <button>
+                    <button id="button-learn-more">
                         LEARN MORE
                     </button>
                 </div>
@@ -266,18 +267,21 @@
                             <input type="email" placeholder="Insert your email">
                         </li>
                     </div>
-                    <div>
-                        <li>
-                            <label>Contact area</label>
-                        </li>
-                        <li>
-                            <select>
-                                <option value="Human Resources">Human Resourses</option>
-                                <option value="Systems">Systems</option>
-                                <option value="Marketing">Marketing</option>
-                            </select>
-                        </li>
-                    </div>
+                    <fieldset>
+                        <legend>Contact area</legend>
+                        <div>
+                            <input type="radio">
+                            <label>Human resources</label>
+                        </div>
+                        <div>
+                            <input type="radio">
+                            <label>Systems</label>
+                        </div>
+                        <div>
+                            <input type="radio">
+                            <label>Marketing</label>
+                        </div>
+                    </fieldset>
                     <div>
                         <li>
                             <label>Message</label>
@@ -287,10 +291,10 @@
                         </li>
                     </div>
                 </form>
-                <button id="button-1">
+                <button id="button-reset">
                     Reset
                 </button>
-                <button id="button-2">
+                <button id="button-send">
                     Send
                 </button>
             </section>
@@ -375,19 +379,19 @@
         <footer>
             <nav>
                 <a href="http://www.facebook.com">
-                    <img src="assets/facebook_icon.png" alt="Facebook" width="35px" height="35px">
+                    <i class="fa-brands fa-facebook"></i>
                 </a>
                 <a href="http://www.instagram.com">
-                    <img src="assets/instagram_icon.png" alt="Instagram" width="35px" height="35px">
+                    <i class="fa-brands fa-instagram"></i>
                 </a>
                 <a href="http://www.twitter.com">
-                    <img src="assets/twitter_icon.png" alt="Twitter" width="35px" height="35px">
+                    <i class="fa-brands fa-twitter"></i>
                 </a>
                 <a href="http://www.github.com">
-                    <img src="assets/github_icon.png" alt="GitHub" width="35px" height="35px">
+                    <i class="fa-brands fa-github"></i>
                 </a>
                 <a href="http://www.linkedin.com">
-                    <img src="assets/linkedin_icon.png" alt="LinkedIn" width="35px" height="35px">
+                    <i class="fa-brands fa-linkedin"></i>
                 </a>
             </nav>
             <p>
