BaSP-W02-2022: styles added to section 5, section 5 html corrected to add styles, spaces between p corrected, icons styles corrected

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -57,15 +57,15 @@
                 </p>
                 <div>
                     <p class="line">
-                        <img src="assets/email_icon.png" alt="Email" width="15px" height="15px">
+                        <i class="fa-solid fa-envelope"></i>
                         infotrackgenix@something.idk
                     </p>
                     <p class="line">
-                        <img src="assets/house_icon.png" alt="Address" width="15px" height="15px">
+                        <i class="fa-solid fa-house"></i>
                         1234 Somewhere Road #8254, Nashville, TN 00000-0000
                     </p>
                     <p>
-                        <img src="assets/phone_icon.png" alt="Phone" width="15px" height="15px">
+                        <i class="fa-solid fa-phone-flip"></i>
                         (000)000-0000
                     </p>
                 </div>
@@ -286,7 +286,7 @@
                         <li>
                             <label>Message</label>
                         </li>
-                        <li>
+                        <li id="message">
                             <input type="textarea" placeholder="Message">
                         </li>
                     </div>
@@ -306,15 +306,17 @@
                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                      Don't take this text seriously.
                 </p>
-                <h4>
-                    Something else
-                </h4>
-                <img src="assets/something-else-1.png" alt="Image">
-                <p>
-                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
-                     Don't take this text seriously.
-                </p>
-                <img src="assets/something-else-2.png" alt="Image">
+                <div>
+                    <h4>
+                        Something else
+                    </h4>
+                    <img src="assets/something-else-1.png" alt="Image">
+                    <p>
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
+                    </p>
+                    <img src="assets/something-else-2.png" alt="Image">
+                </div>                
             </section>
             <section class="section-6">
                 <div>
