BaSP-W02-2022: sectin 4 completed, details corrected

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -251,34 +251,36 @@
                     Get some info
                 </h3>
                 <form>
-                    <div>
-                        <li>
-                            <label>Full name</label>
-                        </li>
-                        <li>
-                            <input type="text" placeholder="Insert your name">
-                        </li>                        
-                    </div>
-                    <div>
-                        <li>
-                            <label>Email</label>
-                        </li>
-                        <li>
-                            <input type="email" placeholder="Insert your email">
-                        </li>
-                    </div>
-                    <fieldset>
+                    <div class="form">
+                        <div>
+                            <li>
+                                <label>Full name</label>
+                            </li>
+                            <li>
+                                <input class="form-1" type="text" placeholder="Insert your name">
+                            </li>                        
+                        </div>
+                        <div>
+                            <li>
+                                <label>Email</label>
+                            </li>
+                            <li>
+                                <input class="form-1" type="email" placeholder="Insert your email">
+                            </li>
+                        </div>
+                    </div>                    
+                    <fieldset class="form">
                         <legend>Contact area</legend>
                         <div>
-                            <input type="radio">
+                            <input type="radio" name="contact-area">
                             <label>Human resources</label>
                         </div>
                         <div>
-                            <input type="radio">
+                            <input type="radio" name="contact-area">
                             <label>Systems</label>
                         </div>
                         <div>
-                            <input type="radio">
+                            <input type="radio" name="contact-area">
                             <label>Marketing</label>
                         </div>
                     </fieldset>
@@ -286,8 +288,8 @@
                         <li>
                             <label>Message</label>
                         </li>
-                        <li id="message">
-                            <input type="textarea" placeholder="Message">
+                        <li>
+                            <input id="message" type="textarea" placeholder="Message">
                         </li>
                     </div>
                 </form>
@@ -304,7 +306,9 @@
                 </h3>
                 <p>
                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
-                     Don't take this text seriously.
+                     Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
+                      moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We
+                      left this with a random text for the moment. This is just an example. Don't take this text seriously.
                 </p>
                 <div>
                     <h4>
@@ -313,7 +317,9 @@
                     <img src="assets/something-else-1.png" alt="Image">
                     <p>
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
-                         Don't take this text seriously.
+                         Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
+                         moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We left
+                         this with a random text for the moment. This is just an example. Don't take this text seriously.
                     </p>
                     <img src="assets/something-else-2.png" alt="Image">
                 </div>                
