--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -91,7 +91,7 @@
                         <h2>
                             A practical and easy to use System
                         </h2>
-                        <p>
+                        <p class="section-1-p">
                             Trackgenix is a web system that facilitates the registration of hours worked by each employee in each project and work
                             team.
                         </p>
@@ -109,7 +109,7 @@
                     </h3>
                     <div>
                         <article>
-                            <div>
+                            <div class="section-2-div">
                                 <div class="section-2-img">
                                     <img src="assets/productivity-booster.png" alt="Image" width="50px" height="50px">
                                 </div>
@@ -125,7 +125,7 @@
                             </div>                        
                         </article>
                         <article>
-                            <div>
+                            <div class="section-2-div">
                                 <div class="section-2-img">
                                     <img src="assets/work-traceability.png" alt="Image" width="50px" height="50px">
                                 </div>
@@ -141,7 +141,7 @@
                             </div>                        
                         </article>
                         <article>
-                            <div>
+                            <div class="section-2-div">
                                 <div class="section-2-img">
                                     <img src="assets/leadership.png" alt="Image" width="50px" height="50px">
                                 </div>
@@ -158,7 +158,7 @@
                             </div>                        
                         </article>
                         <article>
-                            <div>
+                            <div class="section-2-div">
                                 <div class="section-2-img">
                                     <img src="assets/decision-making.png" alt="Image" width="50px" height="50px">
                                 </div>
