BaSP-W03-2022: tablet version first draft completed

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -262,38 +262,40 @@
                     </h3>
                     <form>
                         <div class="form">
-                            <div>
-                                <li>
-                                    <label>Full name</label>
-                                </li>
-                                <li>
-                                    <input class="form-1" type="text" placeholder="Insert your name">
-                                </li>                        
-                            </div>
-                            <div>
-                                <li>
-                                    <label>Email</label>
-                                </li>
-                                <li>
-                                    <input class="form-1" type="email" placeholder="Insert your email">
-                                </li>
-                            </div>
-                        </div>                    
-                        <fieldset class="form">
-                            <legend>Contact area</legend>
-                            <div>
-                                <input type="radio" name="contact-area">
-                                <label>Human resources</label>
-                            </div>
-                            <div>
-                                <input type="radio" name="contact-area">
-                                <label>Systems</label>
-                            </div>
-                            <div>
-                                <input type="radio" name="contact-area">
-                                <label>Marketing</label>
-                            </div>
-                        </fieldset>
+                            <div class="form-1">
+                                <div>
+                                    <li>
+                                        <label>Full name</label>
+                                    </li>
+                                    <li>
+                                        <input class="form-1" type="text" placeholder="Insert your name">
+                                    </li>                        
+                                </div>
+                                <div>
+                                    <li>
+                                        <label>Email</label>
+                                    </li>
+                                    <li>
+                                        <input class="form-1" type="email" placeholder="Insert your email">
+                                    </li>
+                                </div>
+                            </div>                    
+                            <fieldset class="form-1">
+                                <legend>Contact area</legend>
+                                <div>
+                                    <input type="radio" name="contact-area">
+                                    <label>Human resources</label>
+                                </div>
+                                <div>
+                                    <input type="radio" name="contact-area">
+                                    <label>Systems</label>
+                                </div>
+                                <div>
+                                    <input type="radio" name="contact-area">
+                                    <label>Marketing</label>
+                                </div>
+                            </fieldset>
+                        </div>                        
                         <div>
                             <li>
                                 <label>Message</label>
