--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -329,7 +329,8 @@
                         <h4>
                             Something else
                         </h4>
-                        <img src="assets/something-else-1.png" alt="Image">
+                        <div class="section-5-div">
+                            <img src="assets/something-else-1.png" alt="Image">
                         <p>
                             Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                              Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
@@ -337,6 +338,7 @@
                              this with a random text for the moment. This is just an example. Don't take this text seriously.
                         </p>
                         <img src="assets/something-else-2.png" alt="Image">
+                        </div>                        
                     </div>                
                 </section>
                 <section class="section-6">
