BaSP-W03-2022: details corrected

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -329,15 +329,25 @@
                         <h4>
                             Something else
                         </h4>
-                        <div class="section-5-div">
-                            <img src="assets/something-else-1.png" alt="Image">
-                        <p>
-                            Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
-                             Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
-                             moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We left
-                             this with a random text for the moment. This is just an example. Don't take this text seriously.
-                        </p>
-                        <img src="assets/something-else-2.png" alt="Image">
+                        <div>
+                            <div class="section-5-div">
+                                <img src="assets/something-else-1.png" alt="Image">
+                                <p>
+                                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                                    Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
+                                    moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We left
+                                    this with a random text for the moment. This is just an example. Don't take this text seriously.
+                                </p>
+                            </div>
+                            <div class="section-5-div">
+                                <p>
+                                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                                    Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
+                                    moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We left
+                                    this with a random text for the moment. This is just an example. Don't take this text seriously.
+                                </p>
+                                <img src="assets/something-else-2.png" alt="Image">
+                            </div>                            
                         </div>                        
                     </div>                
                 </section>
