BaSP-W04-2022: folders and files created

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -100,7 +100,7 @@
                         </button>
                     </div>
                     <div class="section-1-2">
-                        <img src="assets/header.png" alt="Image">
+                        <img src="assets/header.png" alt="Computer">
                     </div>
                 </section>
                 <section class="section-2">
@@ -111,7 +111,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/productivity-booster.png" alt="Image" width="50px" height="50px">
+                                    <img src="assets/productivity-booster.png" alt="Productivity" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -127,7 +127,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/work-traceability.png" alt="Image" width="50px" height="50px">
+                                    <img src="assets/work-traceability.png" alt="Work" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -143,7 +143,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/leadership.png" alt="Image" width="50px" height="50px">
+                                    <img src="assets/leadership.png" alt="Leadership" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -160,7 +160,7 @@
                         <article>
                             <div class="section-2-div">
                                 <div class="section-2-img">
-                                    <img src="assets/decision-making.png" alt="Image" width="50px" height="50px">
+                                    <img src="assets/decision-making.png" alt="Decision" width="50px" height="50px">
                                 </div>
                                 <div class="section-2-text">
                                     <h4>
@@ -183,7 +183,7 @@
                     <div>
                         <article>
                             <div>
-                                <img src="assets/hours-log.png" alt="Image">
+                                <img src="assets/hours-log.png" alt="Clock">
                             </div>
                             <div>
                                 <h4>
@@ -201,7 +201,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="assets/reports.png" alt="Image">
+                                <img src="assets/reports.png" alt="Folders">
                             </div>
                             <div>
                                 <h4>
@@ -219,7 +219,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="assets/resource-management.png">
+                                <img src="assets/resource-management.png" alt="Board">
                             </div>
                             <div>
                                 <h4>
@@ -237,7 +237,7 @@
                         </article>
                         <article>
                             <div>
-                                <img src="assets/multiple-roles.png" alt="Image">
+                                <img src="assets/multiple-roles.png" alt="Team">
                             </div>
                             <div>
                                 <h4>
@@ -331,7 +331,7 @@
                         </h4>
                         <div>
                             <div class="section-5-div">
-                                <img src="assets/something-else-1.png" alt="Image">
+                                <img src="assets/something-else-1.png" alt="Image-1">
                                 <p>
                                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                                     Don't take this text seriously. Explanation here of the correspondant reason. We left this with a random text for the
@@ -346,7 +346,7 @@
                                     moment. This is just an example. Don't take this text seriously. Explanation here of the correspondant reason. We left
                                     this with a random text for the moment. This is just an example. Don't take this text seriously.
                                 </p>
-                                <img src="assets/something-else-2.png" alt="Image">
+                                <img src="assets/something-else-2.png" alt="Image-2">
                             </div>                            
                         </div>                        
                     </div>                
