--- a/Semana-04/index.html
+++ b/Semana-04/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ana Paula Ibaceta - Semana 04</title>
+    <script src="exercises/01-variables-and-operators.js"></script>
+    <script src="exercises/02-strings.js"></script>
+    <script src="exercises/03-arrays.js"></script>
+    <script src="exercises/04-if-else.js"></script>
+    <script src="exercises/05-for.js"></script>
+    <script src="exercises/06-functions.js"></script>
 </head>
 <body>
     <p>
