BaSP-W04-2022: html and css files corrected

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -37,7 +37,7 @@
                 </nav>
             </div>
             <div>
-                <h3>Get in touch</h3>
+                <h3 id="top-padding">Get in touch</h3>
                 <p class="more-padding">
                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                      Don't take this text seriously.
@@ -257,20 +257,20 @@
                         <div class="form">
                             <div class="form-1">
                                 <div>
-                                    <li>
+                                    <p>
                                         <label>Full name</label>
-                                    </li>
-                                    <li>
+                                    </p>
+                                    <p>
                                         <input class="form-1" type="text" placeholder="Insert your name">
-                                    </li>
+                                    </p>
                                 </div>
                                 <div>
-                                    <li>
+                                    <p>
                                         <label>Email</label>
-                                    </li>
-                                    <li>
+                                    </p>
+                                    <p>
                                         <input class="form-1" type="email" placeholder="Insert your email">
-                                    </li>
+                                    </p>
                                 </div>
                             </div>
                             <fieldset class="form-1">
@@ -290,12 +290,12 @@
                             </fieldset>
                         </div>
                         <div>
-                            <li>
+                            <p>
                                 <label>Message</label>
-                            </li>
-                            <li>
+                            </p>
+                            <p>
                                 <input id="message" type="textarea" placeholder="Message">
-                            </li>
+                            </p>
                         </div>
                     </form>
                     <button id="button-reset">
